--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.16.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.16.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
