--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
             <version>2.16.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
